<resources>
    <string name="app_name">SmartBus</string>
    <string name="let_s_enjoy">Let\'s Enjoy A New World</string>
    <string name="search_the_">Search the Safest destination</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="Signup">SignUp</string>
    <string name="name">Name</string>
    <string name="Username">Username</string>
    <string name="email">Email id</string>
    <string name="signup_message">Are you a new User?</string>
    <string name="where_you_w">Where you Want to go?</string>
    <string name="departure_d">Departure Date</string>
    <string name="today_tomor">Today | Tomorrow</string>


    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_text">Login</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <string name="Christopher">Christopher</string>
    <string name="HiHowAreYou">Hi How Are You</string>
    <string name="timing">7:00pm</string>
    <string name="rs">Rs 800</string>

</resources>