<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/buses"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/personName"
                    android:text="@string/Christopher"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastMessage"
                    android:layout_marginTop="5dp"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:text="@string/HiHowAreYou"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/msgtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_alignParentRight="true"
            android:text="@string/timing"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"/>

        <TextView
            android:id="@+id/rupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/rs"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"/>
    </RelativeLayout>

</LinearLayout>