<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/android_lar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToOutline="true"
        android:background="@drawable/android_lar"
        >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="249dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="409dp"
        app:srcCompat="@drawable/buzz" />


    <TextView
        android:id="@+id/let_s_enjoy"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="343dp"
        android:gravity="center"
        android:text="@string/let_s_enjoy"
        android:textAppearance="@style/let_s_enjoy"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/search_the_"
        android:layout_width="228dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="495dp"
        android:gravity="center_horizontal|top"
        android:text="@string/search_the_"
        android:textAppearance="@style/search_the_" />

    <Button
        android:id="@+id/button"
        android:layout_width="228dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="597dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="86dp"
        android:text="@string/get_started"
        android:textAppearance="@style/get_started" />

</RelativeLayout>