<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_lar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/android_lar"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="249dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="412dp"
        app:srcCompat="@drawable/buzz" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="293dp"
        android:layout_height="336dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/rectangle_2" />

    <TextView
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="351dp"
        android:gravity="center_horizontal|top"
        android:text="@string/Signup"
        android:textAppearance="@style/Signup"
        />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="401dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="439dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="478dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="522dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button2"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="572dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/Signup" />


</RelativeLayout>